feat: implement email verification and password reset functionality using OTP codes